[gd_scene load_steps=4 format=3 uid="uid://cksfuenbowgcb"]

[ext_resource type="Script" path="res://scripts/enemy_car.gd" id="1_j5m5w"]
[ext_resource type="Texture2D" uid="uid://daa26o6rgnp40" path="res://graphics/cars.png" id="2_ve1t6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lyiv"]
size = Vector2(89, 237)

[node name="EnemyCar" type="Area2D"]
z_index = 2
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
script = ExtResource("1_j5m5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 2.5)
shape = SubResource("RectangleShape2D_5lyiv")
debug_color = Color(0.873362, 0.000453199, 0.841176, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ve1t6")
region_enabled = true
region_rect = Rect2(0, 0, 116, 253)

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D4" type="RayCast2D" parent="Raycasts"]
rotation = -0.349066
target_position = Vector2(0, -320)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
rotation = -0.174533
target_position = Vector2(0, -320)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -320)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
rotation = 0.174533
target_position = Vector2(0, -320)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D5" type="RayCast2D" parent="Raycasts"]
rotation = 0.349066
target_position = Vector2(0, -320)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="SideRaycasts" type="Node2D" parent="."]

[node name="RightRaycast" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
target_position = Vector2(90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="RightRaycast2" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
position = Vector2(0, -70)
target_position = Vector2(90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="RightRaycast3" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
position = Vector2(0, 100)
target_position = Vector2(90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRaycast" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
target_position = Vector2(-90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRaycast2" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
position = Vector2(0, 100)
target_position = Vector2(-90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRaycast3" type="RayCast2D" parent="SideRaycasts" groups=["SideRaycasts"]]
position = Vector2(0, -70)
target_position = Vector2(-90, 0)
collision_mask = 18
collide_with_areas = true
collide_with_bodies = false

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
